<resources>
    <string name="app_name">AFCON QUIZ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Afcon Quiz Game</string>
    <string name="home_button">Begin</string>
    <string name="next_button">Next</string>
    <string name="correct_text">Correct: </string>
    <string name="correct_number">0</string>
    <string name="empty_text">Empty: </string>
    <string name="empty_number">0</string>
    <string name="wrong_text">Wrong: </string>
    <string name="wrong_number">0</string>
    <string name="question_number">Question: 1</string>
    <string name="button_option">Country Name</string>
    <string name="result_text">Your Results</string>
    <string name="button_new">New Quiz</string>
    <string name="button_exit">Exit</string>

</resources>